# Hastur

./: .gitignore  CMakeLists.txt  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
docs/: AOVS.md  BACKLOG.md  CI_RUNNERS.md  HOST_COMPATIBILITY.md  LINUX.md  MHR_ASSETS.md  MODELS.md  WINDOWS.md
packaging/: make_pkg.sh
src/: CameraMatrix.cpp  CameraMatrix.h  CameraSolver.cpp  CameraSolver.h  CropAffine.cpp  CropAffine.h  Cryptomatte.cpp  Cryptomatte.h  DetectorEngine.cpp  DetectorEngine.h  HandRefinerEngine.cpp  HandRefinerEngine.h  HasturPlugin.cpp  LeotardMask.cpp  LeotardMask.h  MeshAssets.cpp  MeshAssets.h  MeshTypes.h  MhrModel.cpp  MhrModel.h  OrtAccel.h  OrtSessionManager.cpp  OrtSessionManager.h  Register.h  Sam3dBodyEngine.cpp  Sam3dBodyEngine.h  Sam3dBodyPipeline.cpp  Sam3dBodyPipeline.h  SoftwareRasterizer.cpp  SoftwareRasterizer.h  SurfaceParam.cpp  SurfaceParam.h  WinLoader.cpp
src/nuke/: fnOfxExtensions.h
test-assets/: mhr_assets.manifest.json
tests/: aov_validate.cpp  geometry_validate.cpp  mhr_validate.cpp  ort_check.cpp  raster_validate.cpp
tests/natron/: run_smoke.sh  smoke_aovs.py
tools/: BODY_EXPORT_REPORT.md  DETECTOR_REPORT.md  E2E_PARITY_REPORT.md  GEOMETRY_REPORT.md  HAND_EXPORT_REPORT.md  MULTIPERSON_REPORT.md  RASTER_REPORT.md  bench_detector.py  convert_models.ps1  convert_models.sh  dump_test_meshes.py  export_detector.py  export_hand.py  export_mesh_oracle.py  export_pose_corrective.py  export_sam3dbody.py  extract_mhr_assets.py  fetch_models.ps1  fetch_models.sh  leotard_preview.cpp  mhr_binfmt.py  mhr_common.py  mhr_meshmodule.py  parity_dump.cpp  pipeline_smoke.cpp  validate_body.py  validate_e2e.py  validate_e2e_parity.py  validate_geometry.py  validate_hand.py  validate_mhr.py  validate_wrist.py
